--- a/PLM-Reporting.org
+++ b/PLM-Reporting.org
@@ -87,10 +87,10 @@ lui-même.
 - Création d'un exercice Editor qui sera utilisé pour exécuter le code
   solution entré sur l'éditeur
 - Envoi des informations du monde édité à PLM
-*** Planned [2/3]
+*** Planned [3/3]
 - [X] Associer le monde édité à l'exercice Editor
 - [X] Faire executer le code de la solution sur le monde
-- [ ] Reprendre le code du controleur exercice qui gère l'affichage du 
+- [X] Reprendre le code du controleur exercice qui gère l'affichage du 
   monde après avoir traité le code de l'élève dans le controleur editor
 ** <2015-04-29>
 *** Done
