--- a/PLM-Reporting.org
+++ b/PLM-Reporting.org
@@ -40,11 +40,18 @@ lui-même.
   4. Cliquer sur "Editor" dans le menu
 
 * Journal
+** <2015-05-21>
+*** Done
+- Ajout des méthodes restantes au service worlds
+- Adaptation du code des nouvelles méthodes
+- Utilisation du service worlds dans le controleur editor
+*** Planned [0/1]
+- [ ] Utiliser le service worlds dans exercise
 ** <2015-05-20>
 *** Done
 - Première version du service worlds pour la gestion des mondes
-*** Planned [0/1]
-- [ ] Ajouter les méthodes restantes communes à editor et exercice
+*** Planned [1/1]
+- [X] Ajouter les méthodes restantes communes à editor et exercise
       au service worlds
 ** <2015-05-19>
 *** Done
