--- a/PLM-Reporting.org
+++ b/PLM-Reporting.org
@@ -40,6 +40,11 @@ lui-même.
   4. Cliquer sur "Editor" dans le menu
 
 * Journal
+** <2015-06-05>
+*** Done
+- Création d'un repertoire du nom de l'exercice sauvegardé
+- Sauvegarde des différents mondes en .map
+- Sauvegarde de la mission en .html
 ** <2015-06-04>
 *** Done
 - Début de la fonction sauvegarde
